--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -63,3 +63,8 @@ h1,
 .profil a:hover {
   color: #19A7CE;
 }
+
+section,
+.about {
+  background-image: url(../public/ilustration/patternpad.svg);
+}
