--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="To help people convert their file">
     <meta name="theme-color" content="#19A7CE"/>
+    <meta name="dicoding:email" content="dhaifullahhilmy@gmail.com">
     <link rel="shortcut icon" href="/icons/Favicon.ico" type="image/x-icon">
     <link rel="apple-touch-icon" href="/icons/icon-192x192.png">
     <link rel="manifest" href="./app.webmanifest">
